adding portfolio github

--- a/content/projects.yaml
+++ b/content/projects.yaml
@@ -28,5 +28,5 @@
   tags:
     - FireBase
     - Gatsby
-  icon: website
+  icon: https://github.com/Mehran9675/Gatsby-portfolio
   image: images/portfolio.png
